<?xml version="1.0"?>
<package>
  <name>nautonomous_pose_odom</name>
  <version>0.0.0</version>
  <description>The nautonomous_pose_odom package</description>

  <maintainer email="daan.zeeuwe01@waternet.nl">Daan Zeeuwe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gps_common</build_depend>
  <build_depend>nautonomous_pose_utm</build_depend>
  <run_depend>gps_common</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nautonomous_pose_utm</run_depend>

</package>
